endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x (YYYY-MM-DD)

[float]
===== Breaking changes
- Breaking change

[float]
===== Deprecated
- Deprecation {pull}2526[#2526]

[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed
- Fix {pull}2526[#2526]

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-4.x]]
=== Ruby Agent version 4.x

[[release-notes-4.3.0]]
==== 4.3.0

[float]
===== Added

- Add JVM memory metrics {pull}1040[#1040]

[[release-notes-4.2.0]]
==== 4.2.0

[float]
===== Added

- Add support for AWS Storage Table/CosmosDB {pull}999[#999]

[float]
===== Fixed

- Align HTTP span types/subtypes with spec {pull}1014[#1014]
- Passing a full URL as a path to `Net::HTTP` {pull}1029[#1029]
- Fix growing number of open file descriptors {pull}1033[#1033]

[[release-notes-4.1.0]]
==== 4.1.0

[float]
===== Added

- Azure App Services instance metadata {pull}1007[#1007]

[float]
===== Changed

- `hostname` is now reported split by `configured_hostname` and `detected_hostname` {pull}1009[#1009]

[float]
===== Fixed
- `service_node_name` is now correctly reported as `service.node.configured_name` {pull}1009[#1009]
- Fix JSON parsing when using yajl-ruby {pull}1012[#1012]
- Fix SpanHelpers when methods take blocks {pull}1013[#1013]
- Fix missing `environment` param when fetching from Central Config {pull}1014[#1014]

[[release-notes-4.0.0]]
==== 4.0.0

[float]
===== Upgrading

Be aware that this release changes the agent's general approach to instrumenting third
party libraries.
It now uses `Module#prepend` over alias method chaining.

This doesn't necessarily impact your application but it could if you are using other gems
that use the old approach to patch the same method.
Mixing the two approaches can lead to infinite recursion.

[float]
===== Removed

- Removed support for Ruby 2.3 and JRuby 9.1 {pull}901[#901]
- Config option `active`, see `enabled` {pull}900[#900]